[package]
name = "nesness"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0" # TODO: Make debug-only
cpal = "0.13.4"
crossbeam = "0.8.1"
lazy_static = "1.4.0"
raylib = "3.5.0"
regex = "1.5.4"
