[package]
name = "nesness"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0" # TODO: Make debug-only
cpal = "0.16.0"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
raylib = "5.5.1"
regex = "1.11.2"
